Add load animation to achievements page for mobile view

--- a/pages/achievements.html
+++ b/pages/achievements.html
@@ -373,7 +373,10 @@
 
     <div class="mobile">
       <div class="achievements-container">
-        <div class="achievement-container">
+        <div
+          class="achievement-container"
+          style="animation: 0.5s ease-in-out 0s 1 slideInFromTop"
+        >
           <div class="heading accordion">
             Academics
             <span class="arrow"
@@ -442,7 +445,10 @@
             </li>
           </ul>
         </div>
-        <div class="achievement-container">
+        <div
+          class="achievement-container"
+          style="animation: 0.5s ease-in-out 0s 1 slideInFromLeft"
+        >
           <div class="heading accordion">
             Quizzes and Olympiads
             <span class="arrow"
@@ -507,7 +513,10 @@
             </li>
           </ul>
         </div>
-        <div class="achievement-container">
+        <div
+          class="achievement-container"
+          style="animation: 0.5s ease-in-out 0s 1 slideInFromRight"
+        >
           <div class="heading accordion">
             National and International Competitions
             <span class="arrow"
@@ -563,7 +572,10 @@
             </li>
           </ul>
         </div>
-        <div class="achievement-container">
+        <div
+          class="achievement-container"
+          style="animation: 0.5s ease-in-out 0s 1 slideInFromBottom"
+        >
           <div class="heading accordion">
             Other Co-Scholastic Activities
             <span class="arrow"
