Complete skills page

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -6,6 +6,40 @@
     <title>Mohit Singh - Achievements</title>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" href="../favicon.png" />
+    <style>
+      .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        height: 100%;
+        width: 100%;
+      }
+
+      .skills-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        margin-top: 50px;
+        max-width: 1000px;
+      }
+
+      .skill-container {
+        padding: 20px;
+        margin: 20px;
+        border-radius: 25px;
+        font-size: 1.2rem;
+        font-weight: 500;
+        transition: all 0.4s ease-in-out;
+        background: #e7295c33;
+      }
+
+      .skill-container:hover {
+        background: #e7295c66;
+        scale: 1.2;
+      }
+    </style>
   </head>
   <body class="dark-mode">
     <header>
@@ -64,31 +98,117 @@
       </nav>
     </header>
 
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ab
-      consectetur dolorem fugiat quisquam earum deserunt ea aut maiores esse?
-      Quo, minus unde? Facilis autem provident eum. Obcaecati nisi voluptas
-      dignissimos totam facere inventore sequi in reprehenderit? Ratione porro
-      voluptates inventore possimus. Voluptate fugiat corrupti sunt ad a vitae
-      corporis commodi odit obcaecati. Eligendi blanditiis modi, sequi ipsa,
-      exercitationem veritatis saepe maxime velit rerum, quisquam obcaecati!
-      Fugiat qui autem impedit dignissimos illo quasi harum aspernatur quaerat
-      eos, dolorum quibusdam eum assumenda ipsa nostrum vitae nobis optio
-      recusandae! Temporibus harum eius sunt vel adipisci praesentium blanditiis
-      accusantium similique possimus. Ipsum neque nobis cupiditate, nostrum
-      adipisci reiciendis harum consectetur voluptatibus facere saepe voluptatem
-      laborum, ducimus commodi doloremque, quibusdam dignissimos enim.
-      Voluptatum cupiditate sint totam dolorum, praesentium perspiciatis
-      voluptas ipsum, ut excepturi laudantium repudiandae consequuntur nostrum
-      sequi fugiat alias. Esse est quae excepturi, ut vero explicabo minus quod
-      accusantium nam nobis facilis obcaecati assumenda iste aperiam
-      consequuntur corporis voluptate voluptas beatae. Eos, quo neque est
-      molestias cumque sit optio dolorum impedit illum omnis ut sapiente veniam
-      modi magnam porro, corrupti labore distinctio. Itaque distinctio
-      architecto sequi, velit dolorem incidunt dolore dicta non cupiditate
-      ducimus dignissimos perspiciatis vero consequuntur, iste mollitia est
-      ratione temporibus.
-    </p>
+    <div class="container">
+      <div class="skills-container">
+        <div
+          class="skill-container"
+          style="animation: 0.5s ease-in-out 0s 1 popIn"
+        >
+          Jetpack Compose
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.55s ease-in-out 0s 1 popIn"
+        >
+          Kotlin
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.6s ease-in-out 0s 1 popIn"
+        >
+          Android Development
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.65s ease-in-out 0s 1 popIn"
+        >
+          Java
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.7s ease-in-out 0s 1 popIn"
+        >
+          Mobile Application Development
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.75s ease-in-out 0s 1 popIn"
+        >
+          Problem Solving
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.8s ease-in-out 0s 1 popIn"
+        >
+          Python
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.85s ease-in-out 0s 1 popIn"
+        >
+          C
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.9s ease-in-out 0s 1 popIn"
+        >
+          C++
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 0.95s ease-in-out 0s 1 popIn"
+        >
+          VB.NET
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 1s ease-in-out 0s 1 popIn"
+        >
+          Electronics and Robotics
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 1.05s ease-in-out 0s 1 popIn"
+        >
+          Django
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 1.1s ease-in-out 0s 1 popIn"
+        >
+          HTML
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 1.15s ease-in-out 0s 1 popIn"
+        >
+          CSS
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 1.2s ease-in-out 0s 1 popIn"
+        >
+          JavaScript
+        </div>
+        <div
+          class="skill-container"
+          style="animation: 1.25s ease-in-out 0s 1 popIn"
+        >
+          Microsoft Office
+        </div>
+      </div>
+      <div>
+        <img
+          src="../icons/skills.png"
+          alt="Skills"
+          style="
+            height: 50px;
+            animation: 0.4s ease-in-out 0s 1 slideInFromBottom;
+            padding: 100px;
+          "
+        />
+      </div>
+    </div>
 
     <script src="../theme_script.js"></script>
   </body>
