--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             id="instagram-mobile"
             class="mobile"
         /></a>
-        <a href="mailto:unignoramus@gmail.com"
+        <a href="mailto:mohit.singh@research.iiit.ac.in"
           ><img
             src="icons/social-media/email/white.png"
             alt="Email"
