--- a/pages/achievements.html
+++ b/pages/achievements.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohit Singh - Achievements</title>
     <link rel="stylesheet" href="../style.css" />
-    <link rel="icon" type="image/png" href="../favicon.png" />
+    <link rel="icon" type="image/png" href="../favicon.ico" />
     <style>
       .heading {
         cursor: pointer;
