--- a/pages/edu_bg.html
+++ b/pages/edu_bg.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohit Singh - Education Background</title>
     <link rel="stylesheet" href="../style.css" />
-    <link rel="icon" type="image/png" href="../favicon.png" />
+    <link rel="icon" type="image/png" href="../favicon.ico" />
     <style>
       .dot {
         height: 4vw;
