--- a/pages/skills.html
+++ b/pages/skills.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mohit Singh - Achievements</title>
     <link rel="stylesheet" href="../style.css" />
-    <link rel="icon" type="image/png" href="../favicon.png" />
+    <link rel="icon" type="image/png" href="../favicon.ico" />
     <style>
       .container {
         display: flex;
@@ -37,7 +37,7 @@
 
       .skill-container:hover {
         background: #e7295c66;
-        scale: 1.2;
+        scale: 1.1;
       }
     </style>
   </head>
