--- a/pages/blogs/NZEB.html
+++ b/pages/blogs/NZEB.html
@@ -62,7 +62,7 @@
         justify-content: center;
         align-items: center;
         width: 90vw;
-        box-shadow: -10px 10px 20px #1d0631;
+        box-shadow: -10px 10px 20px #06311b;
       }
 
       .content {
