Bugfix: Fix contents of NZEB blog

--- a/pages/blogs/NZEB.html
+++ b/pages/blogs/NZEB.html
@@ -168,16 +168,13 @@
         <blockquote>
           <p>
             <em
-              >The .exe file, created from the main.py script, is a short puzzle
-              game with a plethora of little features and details.</em
+              >We have combined the various renewable energy sources by integrating
+          them in a single house to tackle various energy needs, be it
+          temperature regulation, lighting or other electronic appliances.</em
             >
           </p>
         </blockquote>
-        <p>
-          We have combined the various renewable energy sources by integrating
-          them in a single house to tackle various energy needs, be it
-          temperature regulation, lighting or other electronic appliances.
-        </p>
+
         <p>
           NZEB has been designed in such a manner that it minimizes the wastage
           of energy and even stores the surplus energy in a battery pack. Even
